--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h1><a href="index.html">BRAJESH KUMAR</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>Software Engineer</span> </h2>
+      <h2>I'm a passionate <span>Software Developer</span> </h2>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -83,7 +83,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Hello! I am Brajesh Kumar Chaudhary</h3>
           <p class="font-italic">
-            I am a Professional with 2 + year Experience in JAVA Developement </p>
+            I am a Professional with 2 + year Experience in JAVA Development </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
@@ -263,7 +263,7 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">STS Developement tool<i class="val">90%</i></span>
+            <span class="skill">STS Development tool<i class="val">90%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -390,13 +390,15 @@
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
             <h4>SDE-I at Skilrock Technologies</h4>
-            <h5>March 2018 - Present </h5>
+            <h5>March 2020 - Present </h5>
             <p><em>Full Time</em></p>
             <p>
             <ul>
-              <li>Working with closely JAVA,Struts2,Spring Boot,Spring Data.</li>
+              <li>Working with closely JAVA,Spring Boot ,Spring Cloud,Spring Security,Spring Data.</li>
+              <li>Working with  Micro-Services architecture</li>
+              <li>Maintained and debugged applications</li>
               <li>Developed new  REST web services using Java and Spring Boot.</li>
-              <li>Working with J2EE/Java EE (including servlets, JSP, JDBC)</li>
+              <li>Involved in end-to-end Software Engineering activities (with SE Team).</li>
               <li>Working with  web application servers like Apache Tomcat .</li>
               <li>Working in TDD, code testability standards, JUnit/Mockito.</li>
               <li>Experience in messaging products like RabbitMQ.</li>
@@ -406,7 +408,7 @@
             
           </div>
             <div class="resume-item">
-            <h4>SOftware Engineer at Square Yards</h4>
+            <h4>Software Engineer at Square Yards</h4>
             <h5>Aug 2018 - March 2020 </h5>
             <p><em>Full Time</em></p>
             <p>
@@ -414,7 +416,7 @@
               <li>Strong experience in JAVA,Spring MVC ,Spring Boot, Spring Data.</li>
               <li>Experience in building REST web services using Java and Spring Boot.</li>
               <li>Strong experience in MongoDb ,MySQL and Elastic Search.</li>
-              <li>Experience in Java and J2EE/Java EE (including servlets, JSP, JDBC)</li>
+              <li>Created different Micro-Service using Spring boot and deployed with Docker Container</li>
               <li>Experience in web application servers like Apache Tomcat .</li>
               <li>Experience in TDD, code testability standards, JUnit/Mockito.</li>
               <li>Experience in messaging products like RabbitMQ.</li>
