--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Hello! I am Brajesh Kumar Chaudhary</h3>
           <p class="font-italic">
-            I am a Professional with 2 + year Experience in JAVA Development </p>
+            I am a Professional with 2.8 + year Experience in JAVA Development </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
@@ -277,7 +277,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Eclipse<i class="val">40%</i></span>
+            <span class="skill">Eclipse<i class="val">90%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -389,8 +389,19 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
+            <h4>Associate Technology L2 || JAVA at Publicis Sapient </h4>
+            <h5>April 2021-present </h5>
+            <p><em>Full Time</em></p>
+            <p>
+            <ul>
+              <li>Working with closely JAVA,Spring Boot ,Spring Cloud,Spring Security,Spring Data.</li>
+              <li>Working with  Micro-Services architecture</li>  
+            </ul>
+            
+          </div>
+          <div class="resume-item">
             <h4>SDE-I at Skilrock Technologies</h4>
-            <h5>March 2020 - Present </h5>
+            <h5>March 2020 - April 2021 </h5>
             <p><em>Full Time</em></p>
             <p>
             <ul>
